# MOTION

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  abyn.h  main.cpp
docs/: CMakeLists.txt  Doxyfile.in
src/abyncore/: CMakeLists.txt
src/abyncore/abynparty/: abynbackend.cpp  abynbackend.h  abyncore.h  abynparty.cpp  abynparty.h  backend.cpp  backend.h  core.h  party.cpp  party.h
src/abyncore/base/: backend.cpp  backend.h  configuration.cpp  configuration.h  party.cpp  party.h  register.cpp  register.h
src/abyncore/communication/: base_ot_message.cpp  base_ot_message.h  bmr_message.cpp  bmr_message.h  communication_context.cpp  communication_context.h  communication_handler.cpp  communication_handler.h  context.cpp  context.h  handler.cpp  handler.h  hello_message.cpp  hello_message.h  hellomessage.h  message.cpp  message.h  ot_extension_message.cpp  ot_extension_message.h  output_message.cpp  output_message.h  outputmessage.h  partycommunicationhandler.cpp  partycommunicationhandler.h
src/abyncore/crypto/: aes_randomness_generator.cpp  aes_randomness_generator.h  aesrandomnessgenerator.cpp  aesrandomnessgenerator.h  blake2b.cpp  blake2b.h  pseudo_random_generator.cpp  pseudo_random_generator.h  sharing_randomness_generator.cpp  sharing_randomness_generator.h
src/abyncore/gate/: arithmetic_gmw_gate.h  bmr_gate.cpp  bmr_gate.h  boolean_gmw_gate.cpp  boolean_gmw_gate.h  gate.cpp  gate.h
src/abyncore/share/: arithmetic_gmw_share.h  bmr_share.cpp  bmr_share.h  boolean_gmw_share.cpp  boolean_gmw_share.h  share.cpp  share.h  share_wrapper.cpp  share_wrapper.h
src/abyncore/utility/: abynconfiguration.cpp  abynconfiguration.h  bit_matrix.cpp  bit_matrix.h  bit_vector.cpp  bit_vector.h  communication_context.cpp  communication_context.h  condition.cpp  condition.h  config.h.in  configuration.cpp  configuration.h  constants.h  data_storage.cpp  data_storage.h  datastorage.cpp  datastorage.h  helpers.cpp  helpers.h  locked_queue.h  logger.cpp  logger.h  party.cpp  party.h  random.h  typedefs.h
src/abyncore/wire/: arithmetic_gmw_wire.h  bmr_wire.cpp  bmr_wire.h  boolean_gmw_wire.cpp  boolean_gmw_wire.h  wire.cpp  wire.h
src/examples/: CMakeLists.txt
src/examples/aes128/: CMakeLists.txt  aes128_main.cpp
src/examples/benchmark/: CMakeLists.txt  benchmark_main.cpp
src/examples/benchmark_PrivaDA_gaussian_mechanism/: CMakeLists.txt  benchmark_PrivaDA_gaussian_mechanism_main.cpp
src/examples/benchmark_discrete_laplace_discrete_gaussian_mechanism/: CMakeLists.txt  benchmark_discrete_laplace_discrete_gaussian_mechanism_main.cpp
src/examples/benchmark_fixed_point_operation/: CMakeLists.txt  benchmark_fixed_point_operation_main.cpp
src/examples/benchmark_floating_point_operation/: CMakeLists.txt  benchmark_floating_point_operation_main.cpp
src/examples/benchmark_integer_scaling_mechanism/: CMakeLists.txt  benchmark_integer_scaling_mechanism_main.cpp
src/examples/benchmark_integers/: CMakeLists.txt  benchmark_integers_main.cpp
src/examples/benchmark_liangzhao_basic/: CMakeLists.txt  benchmark_liangzhao_basic_P0 copy.txt  benchmark_liangzhao_basic_P0.csv  benchmark_liangzhao_basic_P0.txt  benchmark_liangzhao_basic_P1.csv  benchmark_liangzhao_basic_P1.txt  benchmark_liangzhao_basic_main.cpp
src/examples/benchmark_liangzhao_discrete_gaussian_mechanism_CKS/: CMakeLists.txt  benchmark_liangzhao_discrete_gaussian_mechanism_CKS_P1.csv  benchmark_liangzhao_discrete_gaussian_mechanism_CKS_main.cpp
src/examples/benchmark_liangzhao_discrete_laplace_mechanism_CKS/: CMakeLists.txt  benchmark_liangzhao_discrete_laplace_mechanism_CKS_P0.csv  benchmark_liangzhao_discrete_laplace_mechanism_CKS_P0.txt  benchmark_liangzhao_discrete_laplace_mechanism_CKS_P1.txt  benchmark_liangzhao_discrete_laplace_mechanism_CKS_main.cpp  benchmark_liangzhao_discrete_laplace_mechanism_main.cpp
src/examples/benchmark_liangzhao_dp_mechanism_PrivaDA/: CMakeLists.txt  benchmark_liangzhao_dp_mechanism_PrivaDA_main.cpp
src/examples/benchmark_liangzhao_fixed_point_operation/: CMakeLists.txt  benchmark_liangzhao_fixed_point_operation_P0.csv  benchmark_liangzhao_fixed_point_operation_P0.txt  benchmark_liangzhao_fixed_point_operation_P1.csv  benchmark_liangzhao_fixed_point_operation_P1.txt  benchmark_liangzhao_fixed_point_operation_main.cpp
src/examples/benchmark_liangzhao_floating_point_operation/: CMakeLists.txt  benchmark_liangzhao_floating_point_operation_P0 copy.txt  benchmark_liangzhao_floating_point_operation_P0.csv  benchmark_liangzhao_floating_point_operation_main.cpp  floating_point_agmw_ABZS.txt  floating_point_bmr_circuit_ABY_ESAT.txt
src/examples/benchmark_liangzhao_gaussian_mechanism_CrypTen/: CMakeLists.txt  benchmark_liangzhao_gaussian_mechanism_CrypTen_main.cpp
src/examples/benchmark_liangzhao_integer_scaling_gaussian_mechanism/: CMakeLists.txt  (+1 more)
src/motioncore/: CMakeLists.txt
src/test/: CMakeLists.txt  abyntest.cpp  test_PrivaDA.cpp  test_abyn.cpp  test_abyn_main.cpp  test_aesni.cpp  test_agmw.cpp  test_astra.cpp  test_base_ot.cpp  test_basic_random_number_generation.cpp  test_bgmw.cpp  test_bitmatrix.cpp  test_bitvector.cpp  test_bmr.cpp  test_boolean_algorithms.cpp  test_boolean_astra.cpp  test_communication_layer.cpp  test_constants.h  test_conversions.cpp  test_discrete_gaussian_mechanism_CKS.cpp  test_discrete_laplace_mechanism_CKS.cpp  test_dummy_transport.cpp  test_fixed_point_circuit_CBMC_bgmw.cpp  test_fixed_point_circuit_CBMC_bmr.cpp  test_floating_point_circuit_ABY_bgmw.cpp  test_floating_point_circuit_ABY_bmr.cpp  test_garbled_circuit.cpp  test_gaussian_mechanism.cpp  test_geometricExp_discreteLaplace_discreteGaussian.cpp  test_helpers.h  test_integer_operations.cpp  test_integer_scaling_gaussian_mechanism.cpp  test_integer_scaling_laplace_mechanism.cpp  test_invertbinarytree.cpp  test_kk13_ot.cpp  test_kk13_ot_flavors.cpp  test_liangzhao_EQ_EQZ_LTBits_LTC_LTS_LTZ.cpp  test_liangzhao_agmw.cpp  test_liangzhao_conversions.cpp  test_liangzhao_conversions_garbled_circuit.cpp  (+65 more)
(+2062 files in other folders)
